exports[`Tabs renders correctly 1`] = `
"html
  body
    .uk-flex.uk-flex-column-reverse(center=\'\', flip=\'\', width=\'1-1\')
      ul.uk-tab.uk-tab-bottom
        li.uk-active
          a Tab 1
        |  
        li.uk-disabled
          a Tab 2
        |  
        li
          a Header from slot
      .uk-margin
        div Content Tab 1
"
`;

exports[`Tabs renders correctly 2`] = `
"html
  body
    .uk-flex.uk-flex-column-reverse(center=\'\', flip=\'\', width=\'1-1\')
      ul.uk-tab.uk-tab-bottom
        li.uk-active
          a Tab 1
        |  
        li.uk-disabled
          a Tab 2
        |  
        li
          a Header from slot
      .uk-margin
        div Content Tab 1
    .uk-grid(flip=\'\', width=\'1-1\', contentwidth=\'1-2\')
      .uk-width-auto
        ul.uk-tab.uk-tab-left
          li.uk-active
            a
      .uk-width-expand
        div
          div Content Tab 1
"
`;
